<resources>
    <string name="app_name">AndroidImpact</string>

    <string name="add_ingredient">Add</string>
    <string name="recipe_title_in_list">Recipe Title</string>
    <string name="recipe_category_in_list">Recipe Category</string>
    <string name="recipe_prep_time_in_list">%d min</string>
    <string name="recipe_servings_in_list">%d</string>

    <string name="ingredientStoreAdd_title">Add Ingredient to Storage</string>

    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="unit">Unit</string>
    <string name="category">Category</string>
    <string name="bestBefore">Best Before</string>
    <string name="location">Location</string>
    <string name="expiry">Expiry</string>


    <string name="recipe_title">Title</string>
    <string name="recipe_comments">Comments</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_prep_time">Prep Time (min)</string>
    <string name="recipe_servings">Servings</string>
    <string name="recipe_category">Category</string>

    <string name="activity_title">Activity Title</string>

    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="sampleDate">21-12-2023</string>
    <string name="store_ingredient_amount_display">%1$.2f %2$s</string>
    <string name="shop_ingredient_amount_display">%1$.2f %2$s</string>
    <string name="store_ingredient_location_display">Location: %1$s</string>
    <string name="store_ingredient_date_display">%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navbar_fab">Multipurpose FAB in Navbar</string>
    <string name="add_location">Add Location</string>
    <string name="go_back">Back</string>
    <string name="add_units">Add Unit</string>
    <string name="loading">loading...</string>
    <string name="add_category">Add Category</string>
    <string name="signup">Signup</string>
</resources>