<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity_layout"
    tools:context="com.androidimpact.app.activities.MainActivity">



    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/confetti_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@id/combined_bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/nav_graph" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/combined_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">
        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:fabCradleMargin="10dp"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="10dp"
            app:fabCradleVerticalOffset="10dp">


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                app:menu="@menu/bottom_nav" />

        </com.google.android.material.bottomappbar.BottomAppBar>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/navbarFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:backgroundTint="@color/purple_700"
            android:clickable="true"
            android:contentDescription="@string/navbar_fab"
            android:elevation="8dp"
            android:focusable="true"
            app:borderWidth="0dp"
            app:tint="@android:color/white"
            app:layout_anchor="@+id/bottom_app_bar"
            app:layout_anchorGravity="center"
            app:srcCompat="@android:drawable/ic_input_add"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>