<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#00FFFFFF"
    android:orientation="vertical"
    android:paddingEnd="10dp"
    android:paddingStart="5dp"
    android:paddingVertical="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/description_constraint_layout"
        app:layout_constraintRight_toLeftOf="@id/linearLayout">

        <ImageView
            android:id="@+id/has_null_marker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle"
            app:layout_constraintTop_toTopOf="@id/store_ingredient_description"
            app:layout_constraintBottom_toBottomOf="@id/store_ingredient_description"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="7dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/store_ingredient_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:maxLines="1"
            android:padding="0dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@id/has_null_marker"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_store_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginEnd="4dp"
            android:paddingTop="5dp"
            app:borderWidth="0dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/background"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/store_ingredient_dropdown_toggle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/store_ingredient_dropdown_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/expand_more_white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/store_ingredient_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:chipBackgroundColor="@color/purple_700"
            app:layout_constraintStart_toEndOf="@id/has_null_marker"
            app:layout_constraintTop_toBottomOf="@+id/store_ingredient_description" />

        <com.google.android.material.chip.Chip
            android:id="@+id/store_ingredient_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            app:chipBackgroundColor="?attr/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/store_ingredient_category"
            app:layout_constraintTop_toTopOf="@+id/store_ingredient_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/store_ingredient_expandable_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/description_constraint_layout">


        <TextView
            android:id="@+id/store_ingredient_expiry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="12dp"
            android:text="@string/expiry"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/store_ingredient_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/store_ingredient_expiry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/store_ingredient_expiry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>



